# neuro-symbolic-agent

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: gilgamesh-analysis.md  mythic-conflicts.md
neuro_agent/: agent.py  config.py  memory.py  perception.py  reasoning.py  run.py  utils.py
notebooks/: exploration.ipynb
scripts/: run_agent.py
symbolic_finetuner/: symbolic_gilgamesh_dataset.json  symbolic_gilgamesh_dataset.jsonl  train_gpt.py  train_sbert.py
tests/: test_agent.py
